# sporza-scraper

./: .dockerignore  .gitignore  Docker  Dockerfile  README.md  Sporza_Scraper_Pipeline_Report_v4.docx  Sporza_Scraper_Pipeline_Report_v5.docx  Sporza_Scraper_Summary_Report.docx  docker-compose.yml  pyproject.toml  requirements.txt
data/news/2025/08/26/: 3333825.json  3333855.json  3333907.json
data/news/2025/08/27/: 3333652.json  3333664.json  3333704.json  3333734.json
data/news/2026/03/08/: 3320596.json
data/news/2026/03/15/: 3320577.json
data/news/2026/03/22/: 3335048.json  3335065.json  3335112.json  3335131.json  3335143.json  3335144.json  3335189.json  3335253.json
data/news/2026/03/29/: 3320612.json
data/news/2026/04/15/: 3333687.json  3333750.json  3348453.json  3348479.json  3348480.json  3348500.json  3348501.json  3348503.json  3348510.json  3348554.json  3348557.json  3348570.json  3348591.json  3348602.json  3348613.json  basketbal.json  champions-league.json  (+2 more)
sporza_scraper/: __init__.py  __main__.py  analysis.py  benchmark.py  config.py  dashboard  dashboard.py  http_client.py  match_stats.py  models.py  pipeline.py  player_extractor.py  predictor.py  robots.py  sentiment.py  signals.py  storage.py  utils.py
sporza_scraper/parsers/: __init__.py  football_results.py  live_match.py  news.py
tests/: test_match_stats.py  test_parsers.py  test_predictor.py  test_signals.py
tests/fixtures/: football_results.html  live_match_finished.html  live_match_live.html  news_article_happy.html  news_article_missing_fields.html  news_index.html
(+93 files in other folders)
